--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ buildscript {
     ext {
         compose_version = '1.0.5'
     }
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.40")
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.0' apply false
