--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+    implementation 'com.github.Gurupreet:FontAwesomeCompose:1.1.0'
 }
